# willow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.cpp
src/tests/: testReporter.h  test_reporters.h  test_test.h  test_willow.h
src/willow/: CMakeLists.txt  reporters.h  test.h  willow.cpp  willow.h
